src/test/deca/context/invalid/provided/variable_sans_type.deca
/*/ Description:
//    Programme qui utilise une variable sans type.
//
// Resultats:
//    Ligne 11 : Erreur contextuelle
//
// Historique:
//    cree le 01/01/2022*/

{
        x;
        int y;
}
